Changed Flexbox photo gallery and organized the code

--- a/code/index.html
+++ b/code/index.html
@@ -12,16 +12,18 @@
     />
   </head>
   <header>
-    <img class="logo order-5" src="./images/logo.svg" />
+    <img class="logo" src="./images/logo.svg" />
     <nav>
-      <a class="order-1" href="#">About</a>
-      <a class="order-2" href="#">Subscribe</a>
-      <a class="order-3" href="#">Contribute</a>
-      <a class="order-4" href="#">Enjoy</a>
+        <a class="navink" href="#">About</a>
+        <a class="navlink" href="#">Subscribe</a>
+        <a class="navlink" href="#">Contribute</a>
+        <a class="navlink" href="#">Enjoy</a>
+      </div>
     </nav>
   </header>
 
   <body>
+    <!-- BIG NEWS SECTION -->
     <div class="row">
       <div class="bignews textbox">
         <h1>We deliver great news daily!</h1>
@@ -29,137 +31,149 @@
       </div>
       <div class="bignews object-fit">
         <a href="#">
-          <img
-            class="responsive"
-            src="./images/2.jpg"
-            alt="broken image"
-            width="100%"
-          />
+          <img src="./images/2.jpg" alt="broken image" />
+          <!-- <video class="bignewsvideo" autoplay>
+            <source src="./images/video1.mp4" type="video/mp4" />
+            Your browser does not support the video tag.
+          </video> -->
         </a>
       </div>
     </div>
+    <!-- FLEXBOX GALLERY-->
 
-    <div class="container">
-      <div class="gallery">
+    <section class="container">
+      <div class="message">
+        <h3>Get in the mood!</h3>
+      </div>
+<div class="gallery">
         <a class="gallery-item" href="#"
-          ><img src="./images/1.jpg" alt="Headshot of George Washington" /><span
-            class="text-wrapper"
+          ><img src="./images/1.jpg" alt="No image" /><span class="text-wrapper"
             ><span class="title">It is just science, baby!</span
-            ><span class="explanation"
-              >I'm baby tbh letterpress polaroid, asymmetrical roof party.</span
+            ><span class="explanation">
+              About asymmetrical roof party.</span
             ></span
           ></a
         >
         <a class="gallery-item" href="#"
-          ><img src="./images/1.jpg" alt="Headshot of George Washington" /><span
+          ><img src="./images/2.jpg" allt="No image available" /><span
             class="text-wrapper"
             ><span class="title">It is just science, baby!</span
-            ><span class="explanation"
-              >I'm baby tbh letterpress polaroid, asymmetrical roof party.</span
+            ><span class="explanation">
+              About asymmetrical roof party.</span
             ></span
           ></a
         >
         <a class="gallery-item" href="#"
-          ><img src="./images/1.jpg" alt="Headshot of George Washington" /><span
+          ><img src="./images/1.jpg" alt="No image available" /><span
             class="text-wrapper"
             ><span class="title">It is just science, baby!</span
-            ><span class="explanation"
-              >I'm baby tbh letterpress polaroid, asymmetrical roof party.</span
+            ><span class="explanation">
+              About asymmetrical roof party.</span
             ></span
           ></a
         >
         <a class="gallery-item" href="#"
-          ><img src="./images/2.jpg" alt="Headshot of George Washington" /><span
+          ><img src="./images/2.jpg" alt="No image available" /><span
             class="text-wrapper"
             ><span class="title">It is just science, baby!</span
-            ><span class="explanation"
-              >I'm baby tbh letterpress polaroid, asymmetrical roof party.</span
-            ></span
-          ></a
-        >
-
-        <a class="gallery-item" href="#"
-          ><img src="./images/1.jpg" alt="Headshot of George Washington" /><span
-            class="text-wrapper"
-            ><span class="title">It is just science, baby!</span
-            ><span class="explanation"
-              >I'm baby tbh letterpress polaroid, asymmetrical roof party.</span
+            ><span class="explanation">
+              About asymmetrical roof party.</span
             ></span
           ></a
         >
 
         <a class="gallery-item" href="#"
-          ><img src="./images/2.jpg" alt="Headshot of George Washington" /><span
+          ><img src="./images/1.jpg" alt="No image available" /><span
             class="text-wrapper"
             ><span class="title">It is just science, baby!</span
-            ><span class="explanation"
-              >I'm baby tbh letterpress polaroid, asymmetrical roof party.</span
+            ><span class="explanation">
+              About asymmetrical roof party.</span
             ></span
           ></a
         >
 
         <a class="gallery-item" href="#"
-          ><img src="./images/1.jpg" alt="Headshot of George Washington" /><span
+          ><img src="./images/2.jpg" alt="No image available" /><span
             class="text-wrapper"
             ><span class="title">It is just science, baby!</span
-            ><span class="explanation"
-              >I'm baby tbh letterpress polaroid, asymmetrical roof party.</span
+            ><span class="explanation">
+              About asymmetrical roof party.</span
             ></span
           ></a
         >
 
         <a class="gallery-item" href="#"
-          ><img src="./images/2.jpg" alt="Headshot of George Washington" /><span
+          ><img src="./images/1.jpg" alt="No image available" /><span
             class="text-wrapper"
             ><span class="title">It is just science, baby!</span
-            ><span class="explanation"
-              >I'm baby tbh letterpress polaroid, asymmetrical roof party.</span
+            ><span class="explanation">
+              About asymmetrical roof party.</span
             ></span
           ></a
         >
 
         <a class="gallery-item" href="#"
-          ><img src="./images/1.jpg" alt="Headshot of George Washington" /><span
+          ><img src="./images/2.jpg" alt="No image available" /><span
             class="text-wrapper"
             ><span class="title">It is just science, baby!</span
-            ><span class="explanation"
-              >I'm baby tbh letterpress polaroid, asymmetrical roof party.</span
+            ><span class="explanation">
+              About asymmetrical roof party.</span
             ></span
           ></a
         >
 
         <a class="gallery-item" href="#"
-          ><img src="./images/2.jpg" alt="Headshot of George Washington" /><span
+          ><img src="./images/1.jpg" alt="No image available" /><span
             class="text-wrapper"
             ><span class="title">It is just science, baby!</span
-            ><span class="explanation"
-              >I'm baby tbh letterpress polaroid, asymmetrical roof party.</span
+            ><span class="explanation">
+              About asymmetrical roof party.</span
             ></span
           ></a
         >
 
         <a class="gallery-item" href="#"
-          ><img src="./images/1.jpg" alt="Headshot of George Washington" /><span
+          ><img src="./images/2.jpg" alt="No image available" /><span
             class="text-wrapper"
             ><span class="title">It is just science, baby!</span
-            ><span class="explanation"
-              >I'm baby tbh letterpress polaroid, asymmetrical roof party.</span
+            ><span class="explanation">
+              About asymmetrical roof party.</span
             ></span
           ></a
         >
 
         <a class="gallery-item" href="#"
-          ><img src="./images/2.jpg" alt="Headshot of George Washington" /><span
+          ><img src="./images/1.jpg" alt="No image available" /><span
             class="text-wrapper"
             ><span class="title">It is just science, baby!</span
-            ><span class="explanation"
-              >I'm baby tbh letterpress polaroid, asymmetrical roof party.</span
+            ><span class="explanation">
+              About asymmetrical roof party.</span
+            ></span
+          ></a
+        >
+
+        <a class="gallery-item" href="#"
+          ><img src="./images/2.jpg" alt="No image available" /><span
+            class="text-wrapper"
+            ><span class="title">It is just science, baby!</span
+            ><span class="explanation">
+              About asymmetrical roof party.</span
             ></span
           ></a
         >
       </div>
-    </div>
+    </section>
+
+    <!-- FOOTER -->
     <section class="footer">
+
+        <div class="footer-links">
+          <a class="footer" href="#">About us</a>
+          <a class="footer" href="#">Subscribe now</a>
+          <a class="footer" href="#">Add your story</a>
+          <a class="footer" href="#">Just browse around</a>
+        </div>
+
       <p class="footertext">NEWS COMPANY ©2020</p>
     </section>
   </body>
