--- a/code/index.html
+++ b/code/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script type="text/javascript" src="script.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" rel="stylesheet">
     <title>Sunrise Travel</title>
 </head>
 
@@ -15,118 +15,94 @@
         <!-- logo and navbar -->
         <img src="./pics/logo.png" alt="logo">
 
+        <div class="hamburger">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+
         <nav>
-            <a href="#">One</a>
-            <a href="#">Two</a>
-            <a href="#">Three</a>
-            <a href="#">Four</a>
+            <a href="#">Contact</a>
+            <a href="#">Destinations</a>
+            <a href="#">Booking</a>
         </nav>
     </header>
 
-    <main class="wrapper">
-
-        <h1>Find deals at hotels, flights and package trips.</h1>
-
-        <!-- The big news content -->
-        <section class="big-news">
-            <article class="big-news-box1">
-                <img class="polaroid" src="pics/airplane.jpg" alt="vaccination image">
-            </article>
-            <article class="big-news-box2">
-                <h2>Book your next trip with Sunrise Travel.</h2>
-                <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
-                    sanctus est Lorem ipsum dolor sit amet. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. At vero eos et accusam et justo duo dolores et ea rebum.
-                    Nisi quis eleifend quam adipiscing vitae proin. Aliquet risus feugiat in ante metus. Et molestie ac feugiat sed lectus vestibulum. Enim diam vulputate ut pharetra sit amet aliquam.
-                </p>
 
 
+    <section class="info">
+        <!-- <div class="image"> -->
+        <img src="pics/fiji.jpg" alt="vaccination image">
+        <!-- </div> -->
+        <div class="text">
+            <h1>Find deals on hotels, flights <br>and package trips.</h1>
+            <h3><i>We have destinations all over the world.</i></h3>
+            <button class="btn">Book here</button>
+        </div>
+    </section>
 
-                <p>
-                    A pellentesque sit amet porttitor eget dolor morbi non. Iaculis nunc sed augue lacus viverra. Duis convallis convallis tellus id interdum velit. Faucibus purus in massa tempor. Pharetra pharetra massa massa ultricies mi quis. Sit amet mauris commodo quis
-                    imperdiet massa tincidunt. Adipiscing at in tellus integer. Risus commodo viverra maecenas accumsan lacus vel. Dolor purus non enim praesent elementum facilisis. Eu consequat ac felis donec et odio pellentesque diam volutpat. Magna
-                    sit amet purus gravida quis blandit turpis. Tristique senectus et netus et malesuada fames. Arcu cursus euismod quis viverra nibh cras pulvinar. Eget nunc scelerisque viverra mauris in aliquam. Tempus quam pellentesque nec nam aliquam.
-                    Sem integer vitae justo eget magna.
-                </p>
+    <section class="destinations">
+        <article class="destination-box">
+            <h2>Greece</h2>
+            <img src="pics/greece.jfif" alt="Greece">
+        </article>
+        <article class="destination-box">
+            <h2>Spain</h2>
+            <img src="pics/spain.jfif" alt="Spain">
+        </article>
+        <article class="destination-box">
+            <h2>Italy</h2>
+            <img src="pics/italy.jpg" alt="wheather image">
 
-                <p>
-                    Et magnis dis parturient montes. Facilisi etiam dignissim diam quis enim lobortis scelerisque. Massa sed elementum tempus egestas sed sed. Massa id neque aliquam vestibulum morbi blandit cursus risus at. Lacus sed viverra tellus in hac habitasse platea
-                    dictumst vestibulum. Ullamcorper velit sed ullamcorper morbi tincidunt. Euismod quis viverra nibh cras pulvinar mattis nunc sed blandit. Ornare odio ut sem nulla pharetra diam sit. Arcu ac tortor dignissim convallis. Odio facilisis
-                    mauris sit amet massa vitae tortor. Aliquam malesuada bibendum arcu vitae elementum. Nunc non blandit massa enim nec dui nunc. Orci ac auctor augue mauris augue neque gravida. Odio facilisis mauris sit amet massa vitae tortor condimentum
-                    lacinia. Morbi quis commodo odio aenean sed adipiscing diam donec adipiscing.
+        </article>
+        <article class="destination-box">
+            <h2>Carribean</h2>
+            <img src="./pics/carribean.jpg" alt="Carribean">
+        </article>
+        <article class="destination-box">
+            <h2>South America</h2>
+            <img src="./pics/southamerica.jfif" alt="South America">
+        </article>
+        <article class="destination-box">
+            <h2>Africa</h2>
+            <img src="./pics/africa.jfif" alt="Africa">
+        </article>
+        <article class="destination-box">
+            <h2>Asia</h2>
+            <img src="./pics/asia.jfif" alt="Asia">
+        </article>
+        <article class="destination-box">
+            <h2>Cities</h2>
+            <img src="./pics/newyork.jpg" alt="New York">
+        </article>
+    </section>
 
+    <section class="staycation">
+        <div class="grid1">
+            <img src="./pics/westcoast.jpg" alt="Westcoast">
+        </div>
+        <div class="grid2">
+            <h2>Staycation</h2>
+            <h3>Experience our beautiful country.</h3>
+            <button class="btn">Book here</button>
+        </div>
+        <div class="grid3">
+            <img src="./pics/visby.jpg" alt="Visby">
+        </div>
+        <div class="grid4">
+            <img src="./pics/skiing.jpg" alt="skiing">
+        </div>
+        <div class="grid5">
+            <img src="./pics/stockholm.jpg" alt="Stockholm">
+        </div>
+        <div class="grid6">
+            <img src="./pics/sanddunes.jpg" alt="Wetscoast">
+        </div>
+    </section>
 
-                </p>
-
-            </article>
-
-
-        </section>
-
-        <!-- The other news  -->
-        <section class="other-news">
-            <article class="news-box">
-                <h2>Greece</h2>
-                <img src="pics/greece.jfif" alt="Greece">
-                <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
-                    sanctus est Lorem ipsum dolor sit amet.
-            </article>
-            <article class="news-box">
-                <h2>Spain</h2>
-                <img src="pics/spain.jfif" alt="Spain">
-                <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
-                    sanctus est Lorem ipsum dolor sit amet.
-            </article>
-            <article class="news-box">
-                <h2>Italy</h2>
-                <img src="pics/italy.jpg" alt="wheather image">
-                <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
-                    sanctus est Lorem ipsum dolor sit amet.
-            </article>
-            <article class="news-box">
-                <h2>Carribean</h2>
-                <img src="./pics/carribean.jpg" alt="Carribean">
-                <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
-                    sanctus est Lorem ipsum dolor sit amet.
-            </article>
-            <article class="news-box">
-                <h2>South America</h2>
-                <img src="./pics/southamerica.jfif" alt="South America">
-                <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
-                    sanctus est Lorem ipsum dolor sit amet.
-            </article>
-            <article class="news-box">
-                <h2>Africa</h2>
-                <img src="pics/africa.jfif" alt="Africa">
-                <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
-                    sanctus est Lorem ipsum dolor sit amet.
-            </article>
-            <article class="news-box">
-                <h2>Asia</h2>
-                <img src="pics/asia.jfif" alt="Asia">
-                <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
-                    sanctus est Lorem ipsum dolor sit amet.
-            </article>
-            <article class="news-box">
-                <h2>Cities</h2>
-                <img src="pics/newyork.jpg" alt="New York">
-                <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
-                    sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.
-            </article>
-        </section>
-
-    </main>
 
     <footer>
-
+        <p>Created by Sara Stjernberg <span>@Technigo</span> August -20</p>
     </footer>
 </body>
 
