adding footer, finish styling

--- a/code/index.html
+++ b/code/index.html
@@ -14,22 +14,18 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
-
-
 </head>
 
 <body>
-
-
 
 
   <!-- SECTION 1 - logo & navbar -->
   <header>
     <section id="section-1" class="section-1">
 
-      <nav>
+      <nav class="nav-top">
         <a class="logo-container" href="#">
-          <img class="logo" src="images/logo/logo-4.png">
+          <img class="logo" src="images/logo/logo-4.png" alt="Logo image">
         </a>
         <h1 class="site-name-top">pattern news</h1>
         <a class="nav-bar" href="#">trends</a>
@@ -45,10 +41,10 @@
   <!-- SECTION 2 - the big news content -->
   <section id="section-2" class="section-2">
 
-    <figure class="img-container"><img src="images/news-images/news-39.jpg"></figure>
+    <figure class="img-container"><img src="images/news-images/news-39.jpg" alt="Pattern news"></figure>
     <div class="big-news">
       <a class="news" href="#">
-        <h2>Trend: Botanical colonies</h2>
+        <h2>Botanical colonies – the latest trend</h2>
         <p>With prints of everything from mushrooms, plants and verdant green leaves to picturesque palm trees and
           exotic flowers, the botanical patterns provide you with endless opportunities for creating that tropical
           garden vibe. In the botanical prints category you will find both patterns with a vintage atmosphere, patterns
@@ -59,6 +55,7 @@
 
   </section>
 
+
   <!-- SECTION 3 – the other news -->
   <section id="section-3" class="section-3">
 
@@ -66,7 +63,7 @@
     <div class="card-container">
       <div class="card">
         <a href="#">
-          <img class="img-card" src="images/news-images/news-01.jpg">
+          <img class="img-card" src="images/news-images/news-01.jpg" alt="multi color paint">
           <h3 class="text-on-pic">cool stuff</h3>
         </a>
       </div>
@@ -77,7 +74,7 @@
     <div class="card-container">
       <div class="card">
         <a href="#">
-          <img class="img-card" src="images/news-images/news-49.jpg">
+          <img class="img-card" src="images/news-images/news-49.jpg" alt="the desert">
           <h3 class="text-on-pic">the desert</h3>
         </a>
       </div>
@@ -88,7 +85,7 @@
     <div class="card-container">
       <div class="card">
         <a href="#">
-          <img class="img-card" src="images/news-images/news-33.jpg">
+          <img class="img-card" src="images/news-images/news-33.jpg" alt="magenta neon lights">
           <h3 class="text-on-pic">neon lights</h3>
         </a>
       </div>
@@ -99,7 +96,7 @@
     <div class="card-container">
       <div class="card">
         <a href="#">
-          <img class="img-card" src="images/news-images/news-23.jpg">
+          <img class="img-card" src="images/news-images/news-23.jpg" alt="yellow tulips">
           <h3 class="text-on-pic">tulips</h3>
         </a>
       </div>
@@ -110,7 +107,7 @@
     <div class="card-container">
       <div class="card">
         <a href="#">
-          <img class="img-card" src="images/news-images/news-47.jpg">
+          <img class="img-card" src="images/news-images/news-47.jpg" alt="japanese umbrella">
           <h3 class="text-on-pic">osaka</h3>
         </a>
       </div>
@@ -121,7 +118,7 @@
     <div class="card-container">
       <div class="card">
         <a href="#">
-          <img class="img-card" src="images/news-images/news-27.jpg">
+          <img class="img-card" src="images/news-images/news-27.jpg" alt="abstract painting">
           <h3 class="text-on-pic">abstract</h3>
         </a>
       </div>
@@ -132,7 +129,7 @@
     <div class="card-container">
       <div class="card">
         <a href="#">
-          <img class="img-card" src="images/news-images/news-14.jpg">
+          <img class="img-card" src="images/news-images/news-14.jpg" alt="brutalism architecture">
           <h3 class="text-on-pic">brutalism</h3>
         </a>
       </div>
@@ -141,11 +138,12 @@
 
   </section>
 
+
   <!-- SECTION 4 – footer -->
   <footer>
     <section id="section-4" class="section-4">
 
-      <div>
+      <div class="social-container">
 
         <!-- INSTAGRAM -->
         <svg class="social-media" width="48" height="48" viewBox="0 0 48 48" fill="none"
@@ -196,19 +194,22 @@
         </svg>
       </div>
 
+      <nav class="nav-bottom-container">
+        <a class="nav-bar-footer" href="#">FAQ</a>
+        <a class="nav-bar-footer" href="#">Contact</a>
+        <a class="nav-bar-footer" href="#">Subscribe</a>
+      </nav>
 
       <div class="back-to-top">
         <a href="#section-1">
-          <img class="logo-bottom" src="images/logo/logo.png">
+          <img class="logo-bottom" src="images/logo/logo-4.png" alt="logo image">
           <h1 class="site-name-bottom">pattern news</h1>
         </a>
+
       </div>
 
     </section>
   </footer>
-
-
-
 
 </body>
 
