formated the html again and checked css indentation

--- a/code/index.html
+++ b/code/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Feminist Journal</title>
   <link rel="stylesheet" href="./style.css" />
- 
+
 </head>
 
 <body>
@@ -28,41 +28,41 @@
   <!--header-->
 
   <header>
-      <h1>The Feminist Journal</h1>
+    <h1>The Feminist Journal</h1>
   </header>
 
   <!-- daily quote-->
- 
-    <div class="quote">
-      <h3 class="todaysquote">Todays Quote</h3>
-      <p class="new-quote">"A woman needs a man as much as a fish needs a bicycle" - Irina Dunn</p>
-    </div>
+
+  <div class="quote">
+    <h3 class="todaysquote">Todays Quote</h3>
+    <p class="new-quote">"A woman needs a man as much as a fish needs a bicycle" - Irina Dunn</p>
+  </div>
 
 
 
   <!--Large news-->
 
 
-    <div class="large-news-container">
-      <img class="largeimg" src="./img/largenews.jpg" alt="author-headshot">
-      <div class="large-news">
+  <div class="large-news-container">
+    <img class="largeimg" src="./img/largenews.jpg" alt="author-headshot">
+    <div class="large-news">
 
-        <h2>Afford to Divorce</h2>
-        <p>"In Sweden 1/3 of the women who wants a divorce can't afford it"</p>
-        <p>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem
-          ipsumvvlorem ipsumlorem ipsumlorem ipsumvvlorem ipsumvlorem ipsumlorem ipsumlorem ipsumv
-          lorem ipsumlorem ipsumvlorem ipsumvlorem ipsumlorem ipsumvvvlorem ipsumvlorem ipsum
-          vvvlorem ipsumlorem ipsumvlorem ipsumvlorem ipsumvvlorem ipsumvvlorem ipsumvlorem ipsum
-          lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumvlorem ipsumvlorem ipsumipsumv
-          lorem ipsumvlorem ipsum....
-          <a href="#">Read more</a></p>
+      <h2>Afford to Divorce</h2>
+      <p>"In Sweden 1/3 of the women who wants a divorce can't afford it"</p>
+      <p>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem
+        ipsumvvlorem ipsumlorem ipsumlorem ipsumvvlorem ipsumvlorem ipsumlorem ipsumlorem ipsumv
+        lorem ipsumlorem ipsumvlorem ipsumvlorem ipsumlorem ipsumvvvlorem ipsumvlorem ipsum
+        vvvlorem ipsumlorem ipsumvlorem ipsumvlorem ipsumvvlorem ipsumvvlorem ipsumvlorem ipsum
+        lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumvlorem ipsumvlorem ipsumipsumv
+        lorem ipsumvlorem ipsum....
+        <a href="#">Read more</a></p>
 
-      </div>
     </div>
+  </div>
 
 
 
-  <!--small news, columns with hover effect-->
+  <!--small news,with hover effect-->
 
   <section class="small">
     <div class="small-news">
@@ -127,6 +127,7 @@
 
   <div class="images-container">
     <div class="images">
+
       <img src="./img/now.jpg" alt="woman with sign">
       <img src="./img/pillow.jpg" alt="the future is female pillow">
       <img src="./img/kid.jpg" alt="fight like a girl sign">
@@ -140,6 +141,7 @@
   <div class="button">
     <button>Donate</button>
   </div>
+
 
   <!--footer-->
 
