Fixed card to one column in mobile view

--- a/code/index.html
+++ b/code/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
   <title>Todays Inspiration</title>
   <link rel="icon" href="./only-cat.logo.svg" />
   <link rel="stylesheet" href="./style.css" />
@@ -12,7 +13,7 @@
 <body>
 <!-- Header with logo and nav -->
   <header>
-    <img class="logoIcon" src="./cat.logo2.svg">
+    <img class="logoIcon" src="./cat.logo2.svg" alt="Cat logo">
     <nav>
       <a href="">DESIGN</a>
       <a href="">PHOTOGRPHY</a>
@@ -28,7 +29,7 @@
 
   <!-- Start picture -->
   <section class="start-picture">
-    <img class="todaysPic" src="./3329759-01.jpg">
+    <img class="todaysPic" src="./3329759-01.jpg" alt="Girls">
     <div class="ref">
       <h1>Design by Freepik</h1>
     </div>
@@ -38,7 +39,7 @@
   <article class="big-arc">
     <h4>Stay cool</h4>
     <p>Lorem Ipsum</p>
-    <img src="./chole.gif" alt="">
+    <img src="./chole.gif" alt="Chole the witch">
   </article>
 
  <!-- Small News Section  -->
@@ -49,73 +50,73 @@
     </section>
 
     <article class="arc">
-      <img src="./rangnarak.jpg">
+      <img src="./rangnarak.jpg" alt="Wolf and snake">
       <h4>Ragnarök</h4>
       <p>Lorem Ipsum</p>
     </article>
 
     <article class="arc">
-      <img src="./Miss_Fireworks_Ani.gif">
+      <img src="./Miss_Fireworks_Ani.gif" alt="fire extinguishers">
       <h4>Miss Fireworks</h4>
       <p>Lorem Ipsum</p>
     </article>
 
     <article class="arc">
-      <img src="./A_girl.jpg">
+      <img src="./A_girl.jpg" alt="Girl  with black plants">
       <h4>Chilling</h4>
       <p>Lorem Ipsum</p>
     </article>
 
     <article class="arc">
-      <img src="./plant_cat2.jpg">
+      <img src="./plant_cat2.jpg" alt="Cat with plants">
       <h4>Plant Cat</h4>
       <p>Lorem Ipsum</p>
     </article>
 
     <article class="arc">
-      <img src="./Mr_Bubble_Ani.gif">
+      <img src="./Mr_Bubble_Ani.gif" alt="Champange glas">
       <h4>Mr Bubbles</h4>
       <p>Lorem Ipsum</p>
     </article>
 
     <article class="arc">
-      <img src="./a_girl3.jpg">
+      <img src="./a_girl3.jpg" alt="Girl and good hair">
       <h4>Good Hair day</h4>
       <p>Lorem Ipsum</p>
     </article>
 
     <article class="arc">
-      <img src="./fuse.jpg">
+      <img src="./fuse.jpg" alt="fuse it">
       <h4>Fuse</h4>
       <p>Lorem Ipsum</p>
     </article>
 
     <article class="arc">
-      <img src="./cats.jpg">
+      <img src="./cats.jpg" alt="Liquid cats">
       <h4>Liquid cats</h4>
       <p>Lorem Ipsum</p>
     </article>
 
     <article class="arc">
-      <img src="./a_girl2.jpg">
+      <img src="./a_girl2.jpg" alt="Girl with blue hair">
       <h4>Aqua</h4>
       <p>Lorem Ipsum</p>
     </article>
 
     <article class="arc">
-      <img src="./house.jpg">
+      <img src="./house.jpg" alt="houses">
       <h4>House</h4>
       <p>Lorem Ipsum</p>
     </article>
 
     <article class="arc">
-      <img src="./flying_cat.jpg">
+      <img src="./flying_cat.jpg" alt="flying cat">
       <h4>Rocket Cat</h4>
       <p>Lorem Ipsum</p>
     </article>
 
     <article class="arc">
-      <img src="./frukost1.jpg">
+      <img src="./frukost1.jpg" alt="Breakfest time">
       <h4>Breakfest</h4>
       <p>Lorem Ipsum</p>
     </article>
